UI alignment error fixed of propertydetail page

--- a/src/App.css
+++ b/src/App.css
@@ -2229,7 +2229,6 @@ input:focus {
 }
 
 .seller-detail-right p {
-  text-align: center;
   font-size: large;
   font-weight: 200;
 }
